fix: form input -> select; fix: global padding

--- a/index.html
+++ b/index.html
@@ -163,7 +163,18 @@
                 </div>
             
                 <form action="">
-                    <input type="select" placeholder="Выбрать рацион">
+                    <!-- <input type="select" placeholder="Выбрать рацион"> -->
+                    <select placeholder="Выбрать рацион">
+                        <option value="">Выберите рацион</option>
+                        <optgroup>
+                            <option value="1">На каждый день</option>
+                            <option value="2">Лакомка</option>
+                            <option value="3">Контроль веса</option>
+                            <option value="4">Мягкая шерсть</option>
+                            <option value="5">Свежее дыхание</option>
+                            <option value="6">Блеск в глазах</option>
+                        </optgroup>
+                    </select>
                     <input type="text" placeholder="Ваше имя">
                     <input type="tel" placeholder="Ваш телефон">
                     <button type="submit">Выбрать рацион</button>
